force-app/main/default/objects/Sentinel_Snooze__c/Sentinel_Snooze__c.object-meta.xml
<CustomObject>
    <label>Sentinel Snooze</label>
    <pluralLabel>Sentinel Snoozes</pluralLabel>
    <description>Records a rep's "still working it, stop nagging me" decision on a specific at-risk record until a given date. Read by SentinelService to exclude snoozed records from at-risk results.</description>
    <nameField>
        <label>Snooze Number</label>
        <type>AutoNumber</type>
        <displayFormat>SNZ-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>