force-app/main/default/objects/Sentinel_Snooze__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>API name of the object the snoozed record belongs to.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>