force-app/main/default/objects/Sentinel_Snooze__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <description>Why the rep snoozed this record (e.g. "still working it, check back in 2 weeks").</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>