force-app/main/default/objects/Sentinel_Snooze__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <description>The 18-character Id of the snoozed record, on any watched standard object.</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>