force-app/main/default/objects/Sentinel_Snooze__c/fields/Snoozed_By__c.field-meta.xml
<CustomField>
    <fullName>Snoozed_By__c</fullName>
    <label>Snoozed By</label>
    <description>User who snoozed the record.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sentinel Snoozes</relationshipLabel>
    <relationshipName>Sentinel_Snoozes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>