force-app/main/default/objects/Sentinel_Snooze__c/fields/Snoozed_Until__c.field-meta.xml
<CustomField>
    <fullName>Snoozed_Until__c</fullName>
    <label>Snoozed Until</label>
    <description>Date the snooze expires. Records with this date in the future are excluded from at-risk results.</description>
    <type>Date</type>
    <required>true</required>
</CustomField>